--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         <h1>My Works</h1>
       </div>
       <div class="web">
-        <div class="image-top" data-speed=".5">
+        <div class="image-top">
           ihomage
         </div>
-        <div class="image-bottom" data-speed=".1">
+        <div class="image-bottom">
           image
         </div>
       </div>
