--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>Landing</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <script src="https://unpkg.com/scrollreveal@4"></script>
+	<script>
+		ScrollReveal({ duration: 1000 })
+	</script>
 </head>
 <body>
   <section id="left" >  
@@ -76,6 +80,9 @@
           image
         </div>
       </div>
+      <script>
+        
+      </script>
       <div class="threed">
         <div class="image-top">
           ihomage
